// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/discord/fetcher snapshot testing loads channels 1`] = `
Array [
  Object {
    "id": "678348980756938813",
    "name": "Text Channels",
    "nsfw": false,
    "parentId": null,
    "type": "GUILD_CATEGORY",
  },
  Object {
    "id": "678348980798881844",
    "name": "Voice Channels",
    "nsfw": false,
    "parentId": null,
    "type": "GUILD_CATEGORY",
  },
  Object {
    "id": "678348980849213472",
    "name": "general",
    "nsfw": false,
    "parentId": "678348980756938813",
    "type": "GUILD_TEXT",
  },
  Object {
    "id": "678348980878573661",
    "name": "General",
    "nsfw": false,
    "parentId": "678348980798881844",
    "type": "GUILD_VOICE",
  },
  Object {
    "id": "678394406507905129",
    "name": "pagination",
    "nsfw": false,
    "parentId": "678348980756938813",
    "type": "GUILD_TEXT",
  },
  Object {
    "id": "678696874869522446",
    "name": "notmymessage",
    "nsfw": false,
    "parentId": "678348980756938813",
    "type": "GUILD_TEXT",
  },
  Object {
    "id": "830088231538130964",
    "name": "rules",
    "nsfw": false,
    "parentId": null,
    "type": "GUILD_TEXT",
  },
  Object {
    "id": "830088231538130965",
    "name": "moderator-only",
    "nsfw": false,
    "parentId": null,
    "type": "GUILD_TEXT",
  },
  Object {
    "id": "830089044695187586",
    "name": "test stage",
    "nsfw": false,
    "parentId": "678348980798881844",
    "type": "UNKNOWN",
  },
  Object {
    "id": "837851969795129344",
    "name": "test-nsfw",
    "nsfw": true,
    "parentId": "678348980756938813",
    "type": "GUILD_TEXT",
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads emojis 1`] = `
Array [
  Object {
    "id": "678399364418502669",
    "name": "sourcecred",
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads guilds 1`] = `
Array [
  Object {
    "id": "678348980639498428",
    "name": "SourceCred Test Server",
    "permissions": 33620992,
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads members 1`] = `
Array [
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "5887",
      "id": "143776454050709505",
      "username": "Beanow",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "2630",
      "id": "258786206387666944",
      "username": "Thena",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "8826",
      "id": "318552163649454081",
      "username": "hz",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "3370",
      "id": "420341518948237331",
      "username": "dandelion",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "8658",
      "id": "432981598858903585",
      "username": "wchargin",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "2386",
      "id": "439050857921904640",
      "username": "Brian Litwin",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "1337",
      "id": "489154203714060300",
      "username": "topocount",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678350026946117694",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "3969",
      "id": "579830927287386126",
      "username": "sandpiper",
    },
  },
  Object {
    "nick": null,
    "roles": Array [],
    "user": Object {
      "bot": false,
      "discriminator": "7902",
      "id": "664562775770791966",
      "username": "Beez",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678359229433905152",
    ],
    "user": Object {
      "bot": true,
      "discriminator": "1705",
      "id": "678351352770068560",
      "username": "CredBot-Beanow",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "728740243926286386",
    ],
    "user": Object {
      "bot": true,
      "discriminator": "3557",
      "id": "728738433199112280",
      "username": "sts-credbot",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "767909888226492448",
    ],
    "user": Object {
      "bot": true,
      "discriminator": "9034",
      "id": "758370311774404618",
      "username": "topocount's server bot",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "761706197606334535",
    ],
    "user": Object {
      "bot": true,
      "discriminator": "6627",
      "id": "761705425870782516",
      "username": "SourceCred Test",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "772890579632652339",
    ],
    "user": Object {
      "bot": true,
      "discriminator": "3070",
      "id": "772886503830323210",
      "username": "sourcecred-test-thena",
    },
  },
  Object {
    "nick": null,
    "roles": Array [
      "678349848684003359",
    ],
    "user": Object {
      "bot": false,
      "discriminator": "4121",
      "id": "773595284894253136",
      "username": "amrro",
    },
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads messages 1`] = `
Array [
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "20",
    "id": "678394498098659349",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812252307,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "19",
    "id": "678394493124476939",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812251121,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "18",
    "id": "678394489391415348",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812250231,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "17",
    "id": "678394486644146187",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812249576,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "16",
    "id": "678394484291141700",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812249015,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "15",
    "id": "678394480184918016",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [
      Object {
        "id": null,
        "name": "😆",
      },
    ],
    "timestampMs": 1581812248036,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "14",
    "id": "678394477106167818",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812247302,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "13",
    "id": "678394473428025354",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812246425,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "12",
    "id": "678394469048909841",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812245381,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "11",
    "id": "678394468373626890",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812245220,
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads messages 2`] = `
Array [
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "9",
    "id": "678394451462193154",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812241188,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "8",
    "id": "678394448497082388",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812240481,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "7",
    "id": "678394445351092275",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812239731,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "6",
    "id": "678394442301833247",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812239004,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "5",
    "id": "678394436757094410",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [
      Object {
        "id": "678399364418502669",
        "name": "sourcecred",
      },
    ],
    "timestampMs": 1581812237682,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "4",
    "id": "678394433233747978",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812236842,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "3",
    "id": "678394431149178940",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812236345,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "2",
    "id": "678394428569813013",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [],
    "timestampMs": 1581812235730,
  },
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "content": "1",
    "id": "678394426153893948",
    "mentions": Array [],
    "nonUserAuthor": false,
    "reactionEmoji": Array [
      Object {
        "id": null,
        "name": "👍",
      },
    ],
    "timestampMs": 1581812235154,
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads reactions 1`] = `
Array [
  Object {
    "authorId": "143776454050709505",
    "channelId": "678394406507905129",
    "emoji": Object {
      "id": "678399364418502669",
      "name": "sourcecred",
    },
    "messageId": "678394436757094410",
  },
  Object {
    "authorId": "439050857921904640",
    "channelId": "678394406507905129",
    "emoji": Object {
      "id": "678399364418502669",
      "name": "sourcecred",
    },
    "messageId": "678394436757094410",
  },
]
`;

exports[`plugins/discord/fetcher snapshot testing loads roles 1`] = `
Array [
  Object {
    "id": "678348980639498428",
    "name": "@everyone",
  },
  Object {
    "id": "678349848684003359",
    "name": "allow-adding-data",
  },
  Object {
    "id": "678350026946117694",
    "name": "admins",
  },
  Object {
    "id": "678359229433905152",
    "name": "CredBot-Beanow",
  },
  Object {
    "id": "728740243926286386",
    "name": "sts-credbot",
  },
  Object {
    "id": "761706197606334535",
    "name": "SourceCred Test",
  },
  Object {
    "id": "767909888226492448",
    "name": "SC server bot",
  },
  Object {
    "id": "772890579632652339",
    "name": "sourcecred-test",
  },
]
`;
